# pmse-1

./: Cargo.toml  README.md  deno.json
.github/workflows/: ci.yml
demo/apk/: settings.gradle.kts
demo/apk/app/: .gitignore  build.gradle.kts
demo/apk/app/src/main/: AndroidManifest.xml
demo/apk/app/src/main/java/io/github/fm_elpac/pmse_apk/: MainActivity.kt
demo/apk/app/src/main/java/io/github/fm_elpac/pmse_apk/vulkan_bridge/: VulkanJNI.kt  VulkanSurfaceView.kt
demo/apk/app/src/main/res/values/: strings.xml  themes.xml
demo/apk/gradle/wrapper/: gradle-wrapper.properties
dev/pmse-dev/: Cargo.toml
dev/pmse-dev-server/: Cargo.toml
doc/: api_prefix.md  arch.md  lu.md  render.md  st_game_over.md  wmjs.md
k/pmse-dom/: Cargo.toml
k/pmse-jsb/: Cargo.toml  README.md
k/pmse-jsb/src/: lib.rs
k/pmse-u/: Cargo.toml  README.md
k/pmse-u/src/: err.rs  lib.rs  sys_info.rs
k/pmse-v8/: Cargo.toml  README.md
k/pmse-v8/src/: lib.rs
k/pmse-yk/: Cargo.toml
logo/: README.md  pmse-logo-202409.blend
p/pmse/: Cargo.toml  README.md
p/pmse-apk/: Cargo.toml  README.md
p/pmse-apk/src/: jni.rs  lib.rs
p/pmse-gtk/: Cargo.toml  README.md
p/pmse-gtk/src/: gtk_main.rs  lib.rs  raw_handle.rs  wayland_conn.rs  wayland_subsurface.rs
p/pmse-server/: Cargo.toml
p/pmse-wayland/: Cargo.toml
p/pmse-wayland/src/: lib.rs
p/pmse-win/: Cargo.toml  README.md
p/pmse-win/src/: main.rs  w.rs
p/pmse/src/: main.rs
pmse-ai/: Cargo.toml
pmse-render/: Cargo.toml  README.md
pmse-render/shader/font/: draw_rect_f.glsl  draw_rect_v.glsl
pmse-render/shader/t/: test_c.glsl  test_f.glsl  test_v.glsl
pmse-render/src/: lib.rs  t.rs
pmse-render/src/font/: c_8105_8192.txt  draw_glyph.rs  draw_rect.rs  font_img.rs  layout.rs  load.rs  mod.rs
pmse-render/src/vulkan/: mod.rs  shader.rs  swapchain.rs  util.rs  vulkan_host.rs  vulkan_init.rs
pmse-render/src/vulkan/test/: draw_t.rs  mod.rs
pmse-se/: Cargo.toml  README.md
pmse-se/src/: lib.rs  t.rs
pmse-se/src/cd/: mod.rs
pmse-se/src/er/: mod.rs
pmse-se/src/or/: mod.rs
