[package]
name = "pmse-render"
version = "0.1.0-a3"
edition = "2021"
license = "LGPL-3.0-or-later"

authors = ["secext2022 <secext2022@outlook.com>"]
description = "Vulkan render for pmse"
repository = "https://github.com/fm-elpac/pmse-1"
keywords = ["pmse"]
categories = []

[dependencies]
log = "^0.4.22"
vulkano = "^0.34.1"
vulkano-shaders = "^0.34.0"
image = "^0.25.2"
allsorts = "^0.15.0"
#freetype = "^0.7.2"
tiny-skia = "^0.11.4"

# vulkano version
raw-window-handle = "0.5"

pmse-u = { path = "../k/pmse-u", version = "^0.1.0-a2" }
