[package]
name = "pmse-apk"
version = "0.1.0-a1"
edition = "2021"
license = "LGPL-3.0-or-later"

authors = ["secext2022 <secext2022@outlook.com>"]
description = "Android support for pmse"
repository = "https://github.com/fm-elpac/pmse-1"
keywords = ["pmse"]
categories = []

[lib]
crate-type = ["cdylib"]

[dependencies]
log = "^0.4.22"

jni = "^0.21.1"
android_logger = "^0.14.1"
ndk = "^0.9.0"
ndk-sys = "^0.6.0"

# vulkano version
raw-window-handle = "0.5"

pmse-render = { path = "../../pmse-render", version = "^0.1.0-a2" }

[workspace]
