[package]
name = "pmse-win"
version = "0.1.0-a1"
edition = "2021"
license = "LGPL-3.0-or-later"

authors = ["secext2022 <secext2022@outlook.com>"]
description = "Windows support for pmse"
repository = "https://github.com/fm-elpac/pmse-1"
keywords = ["pmse"]
categories = []

[dependencies]
log = "^0.4.22"
env_logger = "^0.11.5"

# vulkano version
raw-window-handle = "0.5"

pmse-render = { path = "../../pmse-render", version = "^0.1.0-a2" }

[dependencies.windows]
version = "^0.58.0"
features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_System_LibraryLoader",
  "Win32_UI_WindowsAndMessaging",
]

[workspace]
