[package]
name = "pmse"
version = "0.1.0-a1"
edition = "2021"
license = "LGPL-3.0-or-later"

authors = ["secext2022 <secext2022@outlook.com>"]
description = "Binary for pmse"
repository = "https://github.com/fm-elpac/pmse-1"
keywords = ["pmse"]
categories = []

[dependencies]
log = "^0.4.22"
env_logger = "^0.11.5"

pmse-render = { path = "../../pmse-render", version = "^0.1.0-a2" }
pmse-gtk = { path = "../pmse-gtk", version = "^0.1.0-a1" }
